Fixed out of bounds popup

--- a/css/style.css
+++ b/css/style.css
@@ -190,6 +190,8 @@ project popup
     left: 50%;
 
     transform: translate(-50%, -50%);
+    
+    max-width: 100%;
 }
 
 #projectPopup p
